--- a/style.css
+++ b/style.css
@@ -128,27 +128,27 @@
 }
 
 .page-1 .right {
-   max-width: 450px;
-   width: 100%;
-   min-height: 611px;
+    max-width: 450px;
+    width: 100%;
+    min-height: 611px;
     /* background-color: black; */
     /* background-color: rgb(119, 251, 251); */
 }
 
 .right-text {
-  width: 100%;
-  height: 86px;
-  background-color: #F17B3B;
-  display: none;
+    width: 100%;
+    height: 86px;
+    background-color: #F17B3B;
+    display: none;
 }
 
-.right-text h1{
+.right-text h1 {
     text-align: center;
     font-size: 30px;
     color: white;
 }
 
-.form-box{
+.form-box {
     width: 450px;
     min-height: 611px;
     background-color: white;
@@ -158,7 +158,7 @@
     border-radius: 10px;
 }
 
-.form-box h1{
+.form-box h1 {
     text-align: center;
     color: #F17B3B;
     padding-top: 16px;
@@ -166,7 +166,7 @@
     margin-bottom: 11px;
 }
 
-.form-fill{
+.form-fill {
     display: flex;
     flex-direction: column;
     margin-top: 11px;
@@ -174,11 +174,11 @@
     height: 70px;
 }
 
-.form-fill label{
+.form-fill label {
     font-size: 10px;
 }
 
-.form-fill select{
+.form-fill select {
     width: 100%;
     height: 100%;
     color: #81A7A7;
@@ -189,9 +189,9 @@
     margin-top: 2px;
 }
 
-.form-fill input{
-   width: 100%;
-   height: 100%;
+.form-fill input {
+    width: 100%;
+    height: 100%;
     color: #81A7A7;
     border: none;
     border: 1px solid #00000031;
@@ -200,7 +200,7 @@
     margin-top: 2px;
 }
 
-.check-box{
+.check-box {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -209,7 +209,7 @@
     margin-top: 34px;
 }
 
-button{
+button {
     padding: 15px 40px;
     margin-top: 27px;
     border-radius: 5px;
@@ -217,11 +217,12 @@ button{
     background-color: #F17B3B;
     cursor: pointer;
     margin-bottom: 46px;
-    border:none;
+    border: none;
 }
+
 /* -----------------------------------------------------------------------------------------------------------------------------------*/
 
-.benefit-page{
+.benefit-page {
     width: 100%;
     height: 300px;
     /* background-color: red; */
@@ -230,37 +231,38 @@ button{
     flex-direction: column;
 }
 
-.benefit-text h1{
+.benefit-text h1 {
     font-size: 40px;
     text-align: center;
     color: #1AB164;
     margin-bottom: 36px;
 }
 
-.benefit-images{
+.benefit-images {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
 }
 
-.benefit-images .imgs img{
+.benefit-images .imgs img {
     width: 61px;
     height: 61px;
 }
 
-.paras .para-1{
+.paras .para-1 {
     font-size: 11px;
     color: #000000;
 }
 
-.paras .para-2{
+.paras .para-2 {
     font-size: 10px;
     color: #000000;
     text-align: center;
 }
+
 /* ----------------------------------------------------------------------------------------------------------------------------------------*/
 
-.customer-page{
+.customer-page {
     min-width: 1150px;
     width: 100%;
     height: 380px;
@@ -273,19 +275,19 @@ button{
     flex-direction: column;
 }
 
-.customer-page h1{
+.customer-page h1 {
     font-size: 40px;
     color: #000000;
     text-align: center;
     padding-top: 30px;
 }
 
-.many-box{
+.many-box {
     display: flex;
     align-items: center;
 }
 
-.box{
+.box {
     width: 317px;
     height: 175px;
     /* background-color: red; */
@@ -313,53 +315,54 @@ button{
     top: 25%;
 }
 
-.many-text img{
+.many-text img {
     width: 22px;
     height: 22px;
 }
 
-.many-text p{
+.many-text p {
     font-size: 12px;
     color: #427779;
 }
 
-.many-text .name-para{
+.many-text .name-para {
     font-size: 17px;
     color: #733A7E;
 }
 
-.circles{
+.circles {
     display: flex;
     align-items: center;
     gap: 5px;
     margin-top: 20px;
 }
 
-.circle{
+.circle {
     height: 12px;
     width: 12px;
     border-radius: 50%;
     background-color: red;
 }
 
-#color-1{
+#color-1 {
     background-color: #7C7F80;
 }
 
-#color-2{
+#color-2 {
     background-color: #363636;
 }
 
-#color-3{
+#color-3 {
     background-color: #7C7F80;
 }
+
 /* ----------------------------------------------------------------------------------------------------------------------------------*/
 
-.text-page{
+.text-page {
     min-width: 924px;
     width: 100%;
-    height: 426px;
-    margin: 71px auto;
+    min-height: 426px;
+    margin-top: 10px;
     /* background-color: red; */
     display: flex;
     align-items: center;
@@ -403,9 +406,10 @@ button{
     font-size: 14px;
     color: #707070;
 }
+
 /* --------------------------------------------------------------------------------------------------------------------------------------*/
 
-.footer-text{
+.footer-text {
     width: 100%;
     height: 50px;
     background-color: #1DB0EA;
@@ -414,12 +418,13 @@ button{
     justify-content: center;
 }
 
-.footer-text p{
+.footer-text p {
     font-size: 18px;
     color: #FFFFFF;
 }
+
 /* --------------------------------------------------------------------------------------------------------------------------------------------- */
-.para-text{
+.para-text {
     width: 450px;
     height: 86px;
     background-color: red;
@@ -442,107 +447,108 @@ footer{
 } */
 /* -------------------------------------------------------------------------------------------------------------------------------------------- */
 
-@media  screen and  (max-width: 1073.9px) {
-    .banner{
+@media screen and (max-width: 1073.9px) {
+    .banner {
         justify-content: center;
     }
-    
-    .left .img2{
+
+    .left .img2 {
         display: none;
     }
-    .page-1{
+
+    .page-1 {
         flex-direction: column-reverse;
     }
 
-   .right .right-text{
+    .right .right-text {
         display: block;
         border-top-right-radius: 10px;
         border-top-left-radius: 10px;
     }
-  
-    .form-box{
+
+    .form-box {
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
     }
 
-    .left .text h1{
+    .left .text h1 {
         display: none;
     }
 
-    .left .img-car{
+    .left .img-car {
         width: 295px;
         height: 111px;
-        margin-left: 30%;
+        margin-left: 20%;
         margin-top: 20px;
     }
-    
-    button{
+
+    button {
         padding: 18px 75px;
         font-size: 13px;
     }
 
-    .benefit-images #img5{
+    .benefit-images #img5 {
         display: none;
     }
 
-    .benefit-images #img4{
+    .benefit-images #img4 {
         display: none;
     }
 
-    .many-box #box-3{
+    .many-box #box-3 {
         display: none;
     }
 
-    .many-box #box-2{
+    .many-box #box-2 {
         display: none;
     }
 
-    .customer-page{
+    .customer-page {
         min-width: 375px;
         width: 100%;
     }
 
-    .customer-page h1{
+    .customer-page h1 {
         font-size: 30px;
     }
 
-    .text-page{
+    .text-page {
         min-width: 375px;
         width: 100%;
     }
 
-    .para-text-1 .paras{
+    .para-text-1 .paras {
         font-size: 12px;
     }
 }
 
-@media  screen and  (max-width: 505.9px){
+@media screen and (max-width: 505.9px) {
     .page-1 .right {
         max-width: 300px;
     }
 
-    .right .right-text{
+    .right .right-text {
         display: flex;
         align-items: center;
     }
 
     .right-text h1 {
-        font-size: 24px;
-    }
-
-    .form-box{
-        width: 300px;
-    }
-
-    .form-box h1{
         font-size: 20px;
     }
 
-    .form-fill{
+    .form-box {
+        width: 300px;
+    }
+
+    .form-box h1 {
+        font-size: 20px;
+    }
+
+    .form-fill {
         width: 255px;
     }
 
-    .form-fill select{
+    .form-fill select {
         padding: unset;
         font-size: 14px;
     }
@@ -552,11 +558,11 @@ footer{
         font-size: 14px;
     }
 
-    .check-box label{
+    .check-box label {
         font-size: 8px;
     }
 
-    .benefit-images #img3{
+    .benefit-images #img3 {
         display: none;
     }
 
@@ -564,7 +570,23 @@ footer{
         font-size: 9px;
     }
 
-    .footer-text{
+    /* .footer-text{
         margin-left: 25px;
+    } */
+
+    .customer-page h1 {
+        font-size: 25px;
+    }
+
+    .para-text-1 {
+        margin-bottom: 10px;
+    }
+
+    .para-text-1 .paras {
+        font-size: 10px;
+    }
+
+    .para-text-2 .paras {
+        font-size: 10px;
     }
 }
